loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:4: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
  }avance()
   ^